--- a/src/components/main/main.css
+++ b/src/components/main/main.css
@@ -1,17 +1,30 @@
 .main {
   height: calc(100vw - 60px);
-  width: calc(100vw - 20vw);
+  width: calc(100vw - 18vw);
   padding-top: 20px;
+  /* background-color: rgb(255, 255, 255); */
 }
+
+.main-top {
+  display: flex;
+  margin-left: 20px;
+  margin-bottom: 20px;
+}
+
+.main-title {
+  margin-left: 20px;
+  font-weight: bold;
+}
+
 
 .items {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
+  margin-left: 20px;
+  margin-right: 20px;
 }
 
 .item{
-  height: 250px;
-  width: 250px;
-  border: solid 1px;
+  margin-top: 20px;
 }
