--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -2,7 +2,7 @@
   display: flex;
   align-items: center;
   width: 100%;
-  height: 60px;
+  /* height: 60px; */
   background-color: white;
   box-shadow: 0 3px 3px rgba(0, 0, 0, 0.1);
 }
