--- a/src/components/modal/modal.css
+++ b/src/components/modal/modal.css
@@ -5,4 +5,17 @@
 
 .showImage {
   margin-top: 70px;
+  margin-left: 50px;
+}
+
+.showWrapper {
+  background-color: rgb(239, 241, 239);
+}
+
+.MuiCardContent-root {
+  background-color: rgb(248, 246, 246);
+}
+
+.MuiCardActions-spacing {
+  background-color: rgb(248, 246, 246);
 }
